--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -18,6 +18,10 @@ body {
 
 .content {
   background: #e3f4ff;
+  margin: 8px;
+  padding: 8px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .button-container {
