--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -34,4 +34,8 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
+  text-align: center;
+  padding: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
