--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -13,12 +13,10 @@ body {
   background: #e3f4ff;
   font-size: 16px;
   padding: 8px;
-  margin: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  margin: 8px;
   padding: 8px;
   padding-top: 16px;
   padding-bottom: 16px;
@@ -26,9 +24,8 @@ body {
 
 .button-container {
   background: #e3f4ff;
-  padding: 8px;
-  text-align: center;
- margin: 8px;
+   padding: 8px;
+   text-align: center;
 }
 
 button {
@@ -37,5 +34,9 @@ button {
   text-align: center;
   padding: 16px;
   padding-top: 8px;
-  padding-bottom: 8px;
+  padding-bottom: 8px;  
+}
+
+.title, .content, .button-container{
+  margin: 8px;
 }
